<resources>
	<string name="app_name">TV Remote</string>
	<string name="toggle_tv_power">Toggle tv power</string>
	<string name="no_internet">No internet</string>
	<string name="loading">Loading…</string>
	<string name="its_on">It\'s on</string>
	<string name="its_off">It\'s off</string>
	<string name="unknown">Unknown</string>
	<string name="notification_title">Tv remote</string>
	<string name="notification_content">This notification indicates that the connection with your TV is active</string>
	<string name="channel_id">tv_remote_channel</string>
	<string name="channel_name">Tv remote notifications</string>
	<string name="select_your_tv">Select your TV</string>
	<string name="select_your_tv_subtitle">Make sure you’re connected to the same WiFi as your TV</string>
	<string name="retry">Retry</string>
	<string name="searching">Searching…</string>
	<string name="something_went_wrong">Something went wrong</string>
	<string name="no_devices_found">No devices found</string>
	<string name="pair_your_phone">Pair your phone</string>
	<string name="pair_your_phone_subtitle">Enter the code displayed on your TV</string>
	<string name="clear">Clear</string>
	<string name="home_button">Home button</string>
	<string name="source_button">Source button</string>
	<string name="record_audio_instructions">Press record button to record your voice</string>
	<string name="power_button">Power button</string>
	<string name="no_devices">No devices</string>
	<string name="settings">Settings</string>
	<string name="settings_subtitle">Here you can customise the behaviour of your remote</string>
	<string name="turn_on_tv">Turn on TV</string>
	<string name="turn_on_tv_subtitle">Once the connection is established your TV will be turned on</string>
	<string name="close_the_application">Close the application</string>
	<string name="close_the_application_subtitle">Turning off your TV causes the application to close</string>
	<string name="shortcuts">Shortcuts</string>
	<string name="shortcuts_subtitle">Toggle visibility of the shortcuts and rearrange them</string>
	<string name="shortcuts_subtitle_2">Tap to edit or remove application shortcuts</string>
	<string name="show_dpad">Show DPad</string>
	<string name="show_dpad_subtitle">Use DPad instead of gesture navigation</string>
	<string name="your_text_goes_here">Your text goes here</string>
	<string name="cancel_voice_input">Cancel voice input</string>
	<string name="now_you_can_use_voice_search">Now you can use voice search!</string>
	<string name="voice_search_permission">Voice search permission</string>
	<string name="voice_search_permission_rationale">If you want to use voice search on your TV you have to agree to record your voice. Your voice will be recorder ONLY when the TV requires it.</string>
	<string name="show_on_lock_screen">Show on lock screen</string>
	<string name="show_on_lock_screen_subtitle">Show the remote over the lock screen if the connection is established</string>
	<string name="add">Add</string>
	<string name="package_name">Package name</string>
	<string name="your_app_name">App name</string>
	<string name="add_custom_shortcut">Add a custom shortcut</string>
	<string name="open_last_connection">Open last connection</string>
	<string name="open_last_connection_subtitle">Open the remote immediately when there is a saved connection</string>
	<string name="device_discovery">Device discovery</string>
	<string name="no_device">No device</string>
	<string name="vibration_enabled">Vibration enabled</string>
	<string name="vibration_enabled_subtitle">Causes the phone to vibrate after each action on the remote</string>
	<string name="add_shortcut">Add shortcut</string>
	<string name="example">Example</string>
	<string name="com_package_example">com.package.example</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="disconnect">Disconnect</string>
	<string name="pause">Pause</string>
</resources>
