<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/containerTouchHandler"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.appcompat.widget.AppCompatImageView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:alpha="0.2"
		android:scaleType="centerCrop"
		android:src="@mipmap/ic_touch_track" />

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/listApplications"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipToPadding="false"
		android:orientation="horizontal"
		android:padding="10dp"
		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:listitem="@layout/item_application" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/buttonPower"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="30dp"
		android:contentDescription="@string/power_button"
		android:src="@drawable/ic_power"
		app:backgroundTint="@color/primary"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:tint="@color/textPrimary" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/buttonHome"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="30dp"
		android:contentDescription="@string/home_button"
		android:src="@drawable/ic_home"
		app:backgroundTint="@color/textPrimary"
		app:fabCustomSize="64dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:tint="@color/primary" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/buttonSource"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="30dp"
		android:contentDescription="@string/source_button"
		android:src="@drawable/ic_source"
		app:backgroundTint="@color/primary"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:tint="@color/textPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>