<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/background">

		<com.google.android.material.appbar.CollapsingToolbarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fitsSystemWindows="true"
			app:collapsedTitleTextAppearance="@style/AppTheme.TitleSmall"
			app:contentScrim="@color/background"
			app:expandedTitleMarginBottom="90sp"
			app:expandedTitleMarginStart="25dp"
			app:expandedTitleTextAppearance="@style/AppTheme.TitleBig"
			app:layout_scrollFlags="exitUntilCollapsed|scroll"
			app:statusBarScrim="@color/background"
			app:title="@string/shortcuts"
			app:titleEnabled="true">

			<androidx.appcompat.widget.Toolbar
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="@color/background"
				android:padding="0dp"
				app:contentInsetStart="25dp"
				app:layout_collapseMode="pin" />

			<androidx.appcompat.widget.LinearLayoutCompat
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="70dp"
				android:orientation="vertical"
				android:paddingHorizontal="25dp"
				android:paddingVertical="20dp"
				app:layout_collapseMode="parallax"
				app:layout_collapseParallaxMultiplier="1">

				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/textSubtitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/shortcuts_subtitle_2"
					android:textColor="@color/textSecondary"
					android:textSize="18sp"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintTop_toBottomOf="@id/textTitle" />

			</androidx.appcompat.widget.LinearLayoutCompat>

		</com.google.android.material.appbar.CollapsingToolbarLayout>

	</com.google.android.material.appbar.AppBarLayout>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/listApplications"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipChildren="false"
		android:clipToPadding="false"
		android:paddingHorizontal="15dp"
		android:paddingTop="15dp"
		android:paddingBottom="100dp"
		app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		app:spanCount="2"
		tools:listitem="@layout/item_application_grid" />

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/buttonAddShortcut"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="25dp"
		android:contentDescription="@string/add_shortcut"
		android:src="@drawable/ic_add"
		app:backgroundTint="@color/primary"
		app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
		app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>